Prevent auto-zoom on iOS Safari

--- a/src/app/components/App/App.global.scss
+++ b/src/app/components/App/App.global.scss
@@ -61,6 +61,10 @@ sup {
   width: 1px;
 }
 
+input {
+  font-size: inherit;
+}
+
 input[type='text'],
 input[type='search'],
 button {
